add metadata stuff

--- a/Web/public/index.html
+++ b/Web/public/index.html
@@ -6,13 +6,37 @@
     <meta http-equiv="pragma" content="no-cache"/>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Loungeware</title>
+
+    <!-- Favicon -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
     <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
-    <title>Loungeware</title>
+    <meta name="theme-color" content="#862F2A">
+
+    <!-- Meta -->
+    <meta name="description" content="Loungeware is a collection of microgames in the style of Warioware that is made by volunteers all over the world in GameMaker Studio 2. Anyone can play for free or submit their own game.">
+    <meta name="keywords" content="game,gamemaker,gamedev,indiedev,indiegame,loungeware,gms2">
+    <meta name="author" content="Loungeware">
+    <meta name="copyright" content="Copyright 2021, Loungeware">
+    <meta name="theme-color" content="#862F2A">
+
+    <!-- Twitter -->
+    <meta name="twitter:title" content="Loungeware">
+    <meta name="twitter:description" content="Loungeware is a collection of microgames in the style of Warioware that is made by volunteers all over the world in GameMaker Studio 2. Anyone can play for free or submit their own game.">
+    <meta name="twitter:image" content="/logo_full_dark.png">
+    <meta name="twitter:url" content="https://loungeware.games/">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Loungeware">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://loungeware.games/">
+    <meta property="og:image" content="/logo_full_dark.png">
+    <meta property="og:description" content="Loungeware is a collection of microgames in the style of Warioware that is made by volunteers all over the world in GameMaker Studio 2. Anyone can play for free or submit their own game.">
+  
   </head>
   <body>
     <noscript>
