--- a/Web/public/index.html
+++ b/Web/public/index.html
@@ -27,14 +27,14 @@
     <!-- Twitter -->
     <meta name="twitter:title" content="Loungeware">
     <meta name="twitter:description" content="Loungeware is a collection of microgames in the style of Warioware that is made by volunteers all over the world in GameMaker Studio 2. Anyone can play for free or submit their own game.">
-    <meta name="twitter:image" content="/larold-jr.png">
+    <meta name="twitter:image" content="/larolds/larold-jr.png">
     <meta name="twitter:url" content="https://loungeware.games/">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Loungeware">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://loungeware.games/">
-    <meta property="og:image" content="/larold-jr.png">
+    <meta property="og:image" content="/larolds/larold-jr.png">
     <meta property="og:description" content="Loungeware is a collection of microgames in the style of Warioware that is made by volunteers all over the world in GameMaker Studio 2. Anyone can play for free or submit their own game.">
   
   </head>
