cool shit hopefully nothing insecure"

--- a/Web/public/game.html
+++ b/Web/public/game.html
@@ -26,6 +26,7 @@
         margin: 0px;
         padding: 0px;
         border: 0px;
+        overflow: hidden;
       }
       canvas {
         image-rendering: optimizeSpeed;
@@ -74,7 +75,7 @@
   <body>
     <div class="gm4html5_div_class" id="gm4html5_div_id">
       <!-- Create the canvas element the game draws to -->
-      <canvas id="canvas" width="640" height="360">
+      <canvas id="canvas" width="540" height="540">
         <p>Your browser doesn't support HTML5 canvas.</p>
       </canvas>
     </div>
