--- a/Loungeware/datafiles/index.html
+++ b/Loungeware/datafiles/index.html
@@ -70,23 +70,7 @@
   <body>
     <div class="gm4html5_div_class" id="gm4html5_div_id">
       <!-- Create the canvas element the game draws to -->
-      <canvas
-        id="canvas"
-        width="540"
-        height="540"
-        style="
-          min-width: 540px;
-          min-height: 540px;
-          width: 100%;
-          height: 100%;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          bottom: -50%;
-          right: -50%;
-          transform: translate(-50%, -50%);
-        "
-      >
+      <canvas id="canvas" width="540" height="540" style="position: absolute; top: 50%; left: 50%; bottom: -50%; right: -50%; transform: translate(-50%, -50%)">
         <p>Your browser doesn't support HTML5 canvas.</p>
       </canvas>
     </div>
